默认左边闭合状态

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,8 +23,8 @@
       <button class="menu-btn" id="menuCollectBtn">📥 采集</button>
       <button class="menu-btn" id="menuRecordsBtn">📋 开奖结果</button>
       <button class="menu-btn" id="menuMaxMissAlertBtn">⚠️ 遗漏提醒</button>
-      <button id="toggleSidebarBtn" class="toggle-section-btn">✨ 分析推荐 ▼</button>
-      <div id="sidebarMenuBtns">
+      <button id="toggleSidebarBtn" class="toggle-section-btn">✨ 分析推荐 ▶</button>
+      <div id="sidebarMenuBtns" style="display: none;">
         <!-- 推荐功能 -->
         <div class="menu-subgroup">
           <button class="menu-subgroup-btn" id="toggleRecommendGroup">
