修复了投注点报表投注总额

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1066,43 +1066,43 @@
             <div class="stats-grid">
               <div class="stats-item">
                 <span class="stats-label">总投注次数：</span>
-                <span class="stats-value" id="totalBetCount">0</span>
+                <span class="stats-value" id="reportTotalBetCount">0</span>
               </div>
               <div class="stats-item">
                 <span class="stats-label">总投注金额：</span>
-                <span class="stats-value" id="totalBetAmount">¥0.00</span>
+                <span class="stats-value" id="reportTotalBetAmount">¥0.00</span>
               </div>
               <div class="stats-item">
                 <span class="stats-label">总赢取金额：</span>
-                <span class="stats-value" id="totalWinAmount">¥0.00</span>
+                <span class="stats-value" id="reportTotalWinAmount">¥0.00</span>
               </div>
               <div class="stats-item">
                 <span class="stats-label">总输赢金额：</span>
-                <span class="stats-value" id="totalProfitLoss">¥0.00</span>
+                <span class="stats-value" id="reportTotalProfitLoss">¥0.00</span>
               </div>
               <div class="stats-item">
                 <span class="stats-label">平均投注金额：</span>
-                <span class="stats-value" id="avgBetAmount">¥0.00</span>
+                <span class="stats-value" id="reportAvgBetAmount">¥0.00</span>
               </div>
               <div class="stats-item">
                 <span class="stats-label">平均赢取金额：</span>
-                <span class="stats-value" id="avgWinAmount">¥0.00</span>
+                <span class="stats-value" id="reportAvgWinAmount">¥0.00</span>
               </div>
               <div class="stats-item">
                 <span class="stats-label">平均输赢金额：</span>
-                <span class="stats-value" id="avgProfitLoss">¥0.00</span>
+                <span class="stats-value" id="reportAvgProfitLoss">¥0.00</span>
               </div>
               <div class="stats-item">
                 <span class="stats-label">正确次数：</span>
-                <span class="stats-value" id="correctCount">0</span>
+                <span class="stats-value" id="reportCorrectCount">0</span>
               </div>
               <div class="stats-item">
                 <span class="stats-label">错误次数：</span>
-                <span class="stats-value" id="wrongCount">0</span>
+                <span class="stats-value" id="reportWrongCount">0</span>
               </div>
               <div class="stats-item">
                 <span class="stats-label">未判断次数：</span>
-                <span class="stats-value" id="unjudgedCount">0</span>
+                <span class="stats-value" id="reportUnjudgedCount">0</span>
               </div>
             </div>
           </div>
