优化30码生成，和跳转链接

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1824,6 +1824,7 @@
   <script src="js/config.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/utils/yearFilter.js"></script>
+  <script src="js/utils/analysisTypeNavigation.js"></script>
   <script src="js/api.js"></script>
   <script src="js/pages.js"></script>
 
