默认值和6期错误的间隔数

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1017,9 +1017,9 @@
           <label style="display: block; margin-bottom: 10px; font-weight: bold; font-size: 15px; color: #2c3e50;">🔍 遗漏期数筛选：</label>
           <div style="display: flex; gap: 12px; margin-bottom: 15px; flex-wrap: wrap; padding: 12px; background: #f8f9fa; border-radius: 8px; border: 2px dashed #ddd; align-items: center;">
             <label style="margin: 0;">最小遗漏：</label>
-            <input type="number" id="minMissInput" placeholder="留空表示不限" min="0" style="width: 100px; padding: 5px; border: 1px solid #ccc; border-radius: 4px;">
+            <input type="number" value=8 id="minMissInput" placeholder="留空表示不限" min="0" style="width: 100px; padding: 5px; border: 1px solid #ccc; border-radius: 4px;">
             <label style="margin: 0 0 0 10px;">最大遗漏：</label>
-            <input type="number" id="maxMissInput" placeholder="留空表示不限" min="0" style="width: 100px; padding: 5px; border: 1px solid #ccc; border-radius: 4px;">
+            <input type="number"   id="maxMissInput" placeholder="留空表示不限" min="0" style="width: 100px; padding: 5px; border: 1px solid #ccc; border-radius: 4px;">
             <button type="button" id="applyMissFilterBtn" class="btn-primary" style="margin-left: 10px;">应用筛选</button>
             <button type="button" id="clearMissFilterBtn" class="btn-secondary" style="margin-left: 5px;">清除筛选</button>
           </div>
