兼容手机版，并添加导出修改文件小工具

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,11 +13,11 @@
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/scheduler_styles.css">
   <link rel="stylesheet" href="css/monitor-config.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style_temp.css">
 </head>
 <body>
   <div class="layout">
-    <aside class="sidebar">
+    <aside class="sidebar" id="sidebar">
       <div class="sidebar-header">
         <h2 class="sidebar-title">🎰 彩票分析系统</h2>
       </div>
@@ -123,6 +123,7 @@
       </div>
     </aside>
     <main class="main-content">
+      <button id="sidebarToggleBtn" class="sidebar-toggle-btn">☰</button>
       <header class="page-header">
         <h1 id="pageTitle">数据采集</h1>
         <div>
