--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1827,7 +1827,9 @@
 
   <!-- 基础模块 -->
   <script src="js/config.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
   <script src="js/utils.js"></script>
+  <script src="js/utils/qrcode.js"></script>
   <script src="js/utils/yearFilter.js"></script>
   <script src="js/utils/analysisTypeNavigation.js"></script>
   <script src="js/api.js"></script>
