号码生成二维码

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1453,10 +1453,10 @@
           <input type="number" id="queryPageSize" class="records-query-input" value="20" min="1" max="100">
           <button id="queryRecordsBtn" type="button">查询</button>
         </div>
-        <div id="recordsTablesRow" style="display:flex;gap:24px;margin-top:16px;align-items:flex-start;">
-          <div id="recordsTableAreaAm" style="flex:1;"></div>
-          <div id="recordsTableAreaHk" style="flex:1;"></div>
-        </div>
+      <div id="recordsTablesRow" style="display: flex; gap: 24px; margin-top: 16px; align-items: flex-start; width: 100%;">
+        <div id="recordsTableAreaAm" style="flex: 1; min-width: 0; overflow: auto;"></div>
+        <div id="recordsTableAreaHk" style="flex: 1; min-width: 0; overflow: auto;"></div>
+      </div>
       </div>
       <div id="eachIssuePage" class="hidden">
         <h2>每期分析</h2>
